# dhcproto

./: Cargo.toml
dhcproto-macros/src/: lib.rs
src/: decoder.rs  encoder.rs  error.rs  lib.rs
src/v4/: bulk_query.rs  fqdn.rs  mod.rs  options.rs  relay.rs
src/v6/: duid.rs  mod.rs  option_codes.rs  options.rs
