[package]
name = "dhcproto"
version = "0.9.0"
authors = ["Ian Laidlaw <ilaidlaw@bluecatnetworks.com>", "Evan Cameron <cameron.evan@gmail.com>"]
edition = "2021"
description = """
A DHCP parser and encoder for DHCPv4/DHCPv6. `dhcproto` aims to be a functionally complete DHCP implementation.
"""
categories = ["network-programming", "encoding","parser-implementations"]
repository = "https://github.com/bluecatengineering/dhcproto"
keywords = ["dhcp","dhcpv4","dhcpv6"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
rand = { version = "0.8", default_features = false, features = ["alloc", "std_rng"] }
#serde = { version = "1.0", features = ["derive"], optional = true }
hex = { version = "0.4.3", default_features = false, features = ["alloc"] }
trust-dns-proto = { git = "https://github.com/domenukk/trust-dns.git", version = "0.22.0", default-features = false, rev = "c644215" }
url = { git = "https://github.com/domenukk/rust-url.git", rev = "3efe254", version = "2.2.2", default_features = false, features = ["alloc"] }
dhcproto-macros = { path = "./dhcproto-macros", version = "0.1.0" }
ipnet = { git = "https://github.com/domenukk/ipnet.git", rev = "5828e6b", default_features = false }
once_cell = { version = "1.17.1", default-features = false, features = ["critical-section"] }
critical-section = "1.1.1"
const-random = "0.1.15"

[features]
default = [] # ["std"]
std = ["thiserror/std", "rand/std"]
#serde = ["std", "dep:serde", "url/serde", "ipnet/serde", "trust-dns-proto/serde-config"]

[dev-dependencies]
criterion = "0.3"
serde_json = "1.0"

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "encode"
harness = false
